# home-lab

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml
.github/workflows/: ci.yml  deploy-fanfic-crawler.yml  deploy-paleo-editor.yml  deploy-paleo-gateway.yml
crates/homelab-api/: Cargo.toml
crates/homelab-api/src/: error.rs  main.rs  router.rs  state.rs
crates/homelab-api/src/handlers/: apps.rs  containers.rs  deploy.rs  deployments.rs  env_vars.rs  hooks.rs  mod.rs  services.rs  system.rs
crates/homelab-api/src/middleware/: auth.rs
crates/homelab-cloudflare/: Cargo.toml
crates/homelab-core/: Cargo.toml
crates/homelab-dashboard/: Cargo.toml
crates/homelab-db/: Cargo.toml
crates/homelab-docker/: Cargo.toml
crates/homelab-docker/src/: builder.rs  client.rs  compose.rs  containers.rs  labels.rs  lib.rs  logs.rs  network.rs
crates/homelab-git/: Cargo.toml
dashboard/: .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  nginx.conf.template  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx  router.tsx
docs/: api-reference.md  architecture.md  cloudflare-tunnel-setup.md  database-schema.md  deploy-flow.md  docker-compose-reference.md  laptop-setup.md  rust-guide.md  services.md  setup-host-explained.md  setup-services-checklist.md
infrastructure/: .env.example  Dockerfile  docker-compose.yml
infrastructure/scripts/: deploy.sh  import-secrets.sh  setup-host.sh  setup-runner.sh
infrastructure/terraform/: main.tf  terraform.tfvars.example  variables.tf
infrastructure/traefik/: dynamic.yml
migrations/: 001_initial_schema.sql  002_cloudflare_state.sql  003_secrets.sql
services/dozzle/: .env.example  docker-compose.yml
services/fanfic-crawler/: .env.example  crontab.example  docker-compose.yml
services/n8n/: .env.example  docker-compose.yml
services/paleo-editor/: .env.example  docker-compose.yml
services/paleo-gateway/: .env.example  (+1 more)
(+45 files in other folders)
