[package]
name = "homelab-docker"
version = "0.1.0"
edition = "2024"

[dependencies]
homelab-core = { path = "../homelab-core" }
bollard = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = "0.3"
tar = "0.4"
